--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <a href="https://lichess.org/@/FreezingTiger">Human account</a>
     <a href="https://lichess.org/@/FlamingDragon_9000">Stockfish account</a>
     <a href="https://lichess.org/@/ShadicBot">Leela account (not up and running)</a>
+    <script src="https://lichess.org/embed?w=1016&h=650"></script>
+    <script src="https://lichess.org/tv/embed?theme=auto&bg=auto"></script>
   </body>
 </html>
