--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="https://rubenwardy.com/lichess_widgets/lichess_widgets.css" />
+    <script src="https://rubenwardy.com/lichess_widgets/lichess_widgets.js"></script>
+    <link rel="stylesheet" href="https://rubenwardy.com/lichess_widgets/light.css" /> 
+    
+  </head>
   <body>
     <h1>Chess Bots by Tony Bai</h1>
     <a href="https://lichess.org/@/FreezingTiger">Human account</a>
     <a href="https://lichess.org/@/FlamingDragon_9000">Stockfish account</a>
     <a href="https://lichess.org/@/ShadicBot">Leela account (not up and running)</a>
+    <script>lichess_widgets.profile_scores("light", "rubenwardy");</script>
     <script src="https://lichess.org/embed?w=1016&h=650"></script>
     <script src="https://lichess.org/tv/embed?theme=auto&bg=auto"></script>
+    <script src="https://lichess.org/training/embed?theme=auto&bg=auto"></script>
+    
   </body>
 </html>
