--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="https://lichess.org/@/FreezingTiger">Human account</a>
     <a href="https://lichess.org/@/FlamingDragon_9000">Stockfish account</a>
     <a href="https://lichess.org/@/ShadicBot">Leela account (not up and running)</a>
-    <script>lichess_widgets.profile_scores("light", "rubenwardy");</script>
+    <script>lichess_widgets.profile_scores("light", "freezingtiger");</script>
     <script src="https://lichess.org/embed?w=1016&h=650"></script>
     <script src="https://lichess.org/tv/embed?theme=auto&bg=auto"></script>
     <script src="https://lichess.org/training/embed?theme=auto&bg=auto"></script>
