--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <link rel="stylesheet" href="https://rubenwardy.com/lichess_widgets/lichess_widgets.css" />
     <script src="https://rubenwardy.com/lichess_widgets/lichess_widgets.js"></script>
     <link rel="stylesheet" href="https://rubenwardy.com/lichess_widgets/light.css" /> 
-    
+    <title>Tony's Botsite</title>
   </head>
   <body>
     <h1>Chess Bots by Tony Bai</h1>
-    <a href="https://lichess.org/@/FreezingTiger">Human account</a>
-    <a href="https://lichess.org/@/FlamingDragon_9000">Stockfish account</a>
-    <a href="https://lichess.org/@/ShadicBot">Leela account (not up and running)</a>
+    <ul>
+      <li><a href="https://lichess.org/@/FreezingTiger">Human account</a></li>
+      <li><a href="https://lichess.org/@/FlamingDragon_9000">Stockfish account</a><br/></li>
+      <li><a href="https://lichess.org/@/ShadicBot">Leela account (not up and running)</a></li>
+    </ul>
     <script>lichess_widgets.profile_scores("light", "freezingtiger");</script>
-    <script src="https://lichess.org/embed?w=1016&h=650"></script>
-    <script src="https://lichess.org/tv/embed?theme=auto&bg=auto"></script>
-    <script src="https://lichess.org/training/embed?theme=auto&bg=auto"></script>
+    <div>
+      <p>Play chess right here!</p>
+      <script src="https://lichess.org/embed?w=1016&h=650"></script><br/>
+      <p>Or maybe watch some games?</p>
+      <script src="https://lichess.org/tv/embed?theme=auto&bg=auto"></script>
+      <p>Perhaps puzzles are more for you?</p>
+      <script src="https://lichess.org/training/embed?theme=auto&bg=auto"></script>
+    </div>
     
   </body>
 </html>
